# skoetch

./: .gitignore  README.md  TODO  deno.jsonc  fresh.gen.ts  import_map.json  main.ts  package-lock.json  package.json  server.js  svelte.config.js  tailwind.config.js  twind.config.ts
communication/: defaultCanvas.ts  roomHandler.ts  socketHandler.ts
islands/: Canvas.tsx  Chat.tsx  Counter.tsx  Form.tsx  Socket.tsx  Tab.tsx
public/: index.html
routes/: [roomCode].tsx  _404.tsx  index.tsx  tab.tsx
routes/api/: _server.ts
routes/api/canvas/: [room].ts
routes/api/chat/: [room].ts
routes/room/: [roomCode].tsx
skoetch-api/: colorGen.js  defaultCanvas.js  roomHandler.js  server.js  socketHandler.js
src/: root.css
src/routes/: index.svelte  index.tsx
src/ws/: websocket.ts
utils/: getType.ts  socketTypes.ts
websocket-server/: Cargo.toml  main.ts  server.ts
websocket-server/src/: lib.rs  main.rs  msg.rs
