[package]
name = "skoetch-websocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "*", features = ["ws"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = "*"
futures = "*"

[workspace]
